feat: #245 전역 3종 주간자료와 V21 구현